# hw-real48

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fuzzing-test.cpp  real48.cpp  real48.hpp  unit-tests.cpp
solution/: README.md  real48.cpp.enc  real48.hpp.enc
